--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/ActionLayout/describedAs/ActionLayoutDescribedAsPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/ActionLayout/describedAs/ActionLayoutDescribedAsPage-description.adoc
@@ -62,7 +62,7 @@ include::../ActionLayoutMenu.java[tags=menu-item-described-as]
 
 === .layout.xml
 
-Instead of using `@ActionLayout#describesAs`, it is also possible to specify a tooltip using the `<action id="..." describedAs="...">` in the link:https://causeway.apache.org/userguide/2.0.0-RC1/fun/ui.html#by-example[.layout.xml] file.
+Instead of using `@ActionLayout#describedAs`, it is also possible to specify a tooltip using the `<action id="..." describedAs="...">` in the link:https://causeway.apache.org/userguide/2.0.0-RC1/fun/ui.html#by-example[.layout.xml] file.
 
 One advantage of using the `.layout.xml` file is that changes can be picked up without having to restart the application.
 On the other hand, including descriptions can make that file rather large.
