--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/progmodel/compositevalues/CompositeValueTypePage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/progmodel/compositevalues/CompositeValueTypePage-description.adoc
@@ -53,8 +53,9 @@ include::CompositeValueTypePage_addComplexNumber.java[tags=class]
 <.> defaults the first parameter to that held by the page object
 <.> makes the first parameter disabled; the end-user can only enter a value for the second parameter.
 +
-The action to subtract is similar
-
+WARNING: the framework currently has a bug in that it doesn't prevent the end-user from editing the first parameter; being tracked with https://issues.apache.org/jira/browse/CAUSEWAY-3455[CAUSEWAY-3455].
++
+The action to subtract is similar.
 
 The framework also needs to know the structure of the value type.
 This is done by providing an implementation of a link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/value/semantics/ValueSemanticsProvider.html[ValueSemanticsProvider].
