--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/progmodel/embeddedvalues/jpa/EmbeddedTypePageJpa-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/progmodel/embeddedvalues/jpa/EmbeddedTypePageJpa-description.adoc
@@ -1,20 +1,25 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-The framework includes _experimental_ support for embedded types.
-These are somewhat similar to value types, in that they have no identity and are persisted inline within their owning object.
-They can also have custom behaviour.
+Embedded types are a feature of the JPA ORM that an entity to a field of a composite type which groups several data fields together.
+The values of the composite type are then stored inline within the entity's table.
+Such embedded types have no identity in and of themselves; they are identified only by the entity that references them.
 
+Embedded types themselves can be mutable or immutable.
+When immutable, they are very similar to value types.
 However, they are not quite true value types as the ORM needs to update their fields directly.
 To enable that, a mutator method is required, though it can be made `private`
 
-CAUTION: This is still work in progress, see link:https://issues.apache.org/jira/browse/CAUSEWAY-1695[CAUSEWAY-1695].
 
 == How this demo works
 
 This page object has a collection `allConstants` that just returns a set of `NumberConstantJpa` entities.
-The `NumberConstantJpa` entity defines a `name` property (of type `String) and a `numberConstant` property (of type `ComplexNumberJpa`).
-It is this second property that we are interested in:
+The `NumberConstantJpa` entity defines a `name` property (of type `String`) and a `numberConstant` property (of type `ComplexNumberJpa`).
+It is this second property that we are interested in.
 
+In terms of code:
+
+* the `NumberConstantJpa` entity is defined as:
++
 [source,java]
 .NumberConstantJpa.java
 ----
@@ -22,91 +27,43 @@ include::NumberConstantJpa.java[tags=class]
 ----
 <.> JPA `@Embedded` annotation indicates that the constituent parts of the embedded type should be stored as columns of the owning entity
 
-
-== Embedded type
-
-The `ComplexNumberJpa` type must also be annotated as embedded.
-We also annotate it with `@Value`; this instructs the framework how to interact with the type:
-
+* the `ComplexNumberJpa` is the embedded type:
++
 [source,java]
-.ComplexNumberJdo.java
+.ComplexNumberJpa.java
 ----
 include::ComplexNumberJpa.java[tags=class]
 ----
-<.> Indicates to the ORM that this _is_ persisted data ...
-<.> \... but can only be embedded.
-<.> Indicates how the framework interacts with properties and parameters of this type.
-This is explained further in the "value semantics provider" section below.
-<.> All fields are accessible ...
-<.> \... but can only be mutated by the ORM (so acts like a value type).
+<.> JPA `@Embeddable` annotation is the companion of `@Embedded` on the owning object
+<.> Indicates to the framework that this is a value rather than an entity.
+Accordingly, we will also need to provide a `ValueSemanticsProvider` implementation, discussed below.
+<.> provides access the fields
+<.> allows the ORM to initialize the fields
+<.> these fields of the embedded type are persisted as columns of the owning entity
 
-This class defines some behaviour:
-
-* its title:
+* the `ComplexNumberJpaValueSemantics` class instructs the framework how to render the `ComplexNumberJpa` as a value.
 +
 [source,java,indent=0]
-----
-include::ComplexNumberJpa.java[tags=title]
-----
-
-* how to parse a string:
-+
-[source,java]
-----
-include::ComplexNumberJpa.java[tags=parse,indent=0]
-----
-+
-This is used by the "value semantics provider", discussed in the next section.
-
-As well as using this type as a property, it can also be used as a parameter.
-The `NumberConstantJdo_updateNumber` mixin allows the value of the complex number held by any `NumberConstant` to be updated footnote:[somewhat dubious code, but this is only an example!]:
-
-[source,java]
-.NumberConstantJdo_updateNumber.java
-----
-include::NumberConstantJpa_updateNumber.java[tags=class]
-----
-
-
-== Value Semantics Provider
-
-As mentioned in the previous section, the framework uses an implementation of `ValueSemanticsProvider` to know how to interact with properties and parameters of the type:
-
-[source,java]
-.ComplexNumberJdoValueSemantics.java
+.ComplexNumberJpaValueSemantics.java
 ----
 include::ComplexNumberJpaValueSemantics.java[tags=class]
 ----
-
-where:
-
-* `getRenderer()` is responsible for rendering the value:
++
+In this particular demo, the value is immutable.
+See elsewhere for examples of value types that can be mutated.
++
+** the `getRenderer()` method:
 +
 [source,java,indent=0]
+.ComplexNumberJpaValueSemantics.java
 ----
 include::ComplexNumberJpaValueSemantics.java[tags=getRenderer]
 ----
-
-* `getParser()` is responsible for parsing the entered string (for either an editable property or a parameter):
++
+** the `compose()`/`decompose()` methods:
 +
 [source,java,indent=0]
+.ComplexNumberJpaValueSemantics.java
 ----
-include::ComplexNumberJpaValueSemantics.java[tags=getParser]
+include::ComplexNumberJpaValueSemantics.java[tags=compose]
 ----
-+
-In this case the implementation just delegates to the `ComplexNumberJdo` class itself.
-
-* `getEncoderDecoder()` converts the value into a string for marshalling and other purposes:
-+
-[source,java,indent=0]
-----
-include::ComplexNumberJpaValueSemantics.java[tags=getEncoderDecoder]
-----
-
-* `getDefaultsProvider()` returns the default value to be used for non-optional parameters and properties:
-+
-[source,java,indent=0]
-----
-include::ComplexNumberJpaValueSemantics.java[tags=getDefaultsProvider]
-----
-
