--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/progmodel/customvalues/ScalarValueTypePage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/progmodel/customvalues/ScalarValueTypePage-description.adoc
@@ -9,54 +9,34 @@ In contrast, value types have no identity of their own, and two value objects wi
 It's also common for value types to define an algebra, where they can be combined through operations to produce new values.
 
 A scalar value type has a single data attribute, while a composite value type has multiple.
-This page demonstrates the use of *composite* value types.
+This page demonstrates the use of *scalar* value types.
+
 
 == How this demo works
 
-This page object defines a single property whose type is a value type, `ComplexNumber`, intended to model the mathematical concept of link:https://en.wikipedia.org/wiki/Complex_number[complex numbers].
-This is a composite value type, consisting of two `double` values: the _real_ part, and the _imaginary_ part.
-
-The value held by this page object can be changed using the two actions.
-These simply delegate down to the operations defined by the value type itself.
-
+This page object defines a single property whose type is a value type, `EmailAddress`.
+This is in essence a string, but with an additional constraint (a regex) as to the formatting of that string.
 
 In terms of code:
 
-* The `ComplexNumber` type is defined as:
+* The `EmailAddress` type is defined as:
 +
 [source,java]
-.ComplexNumber.java
+.EmailAddress.java
 ----
-include::ComplexNumber.java[tags=class]
+include::EmailAddress.java[tags=class]
 ----
 <.> Defines this as a value type to the framework
 <.> Uses lombok to define getters, a `hashCode()`, `equals()`, `toString()` and a constructor.
-<.> The two data attributes
-<.> Operations that define a simple algebra for this type.
+<.> The single data attribute
 
 * this page object defines this as a single property:
 +
 [source,java]
-.CompositeValueTypePage.java
+.ScalarValueTypePage.java
 ----
-include::CompositeValueTypePage.java[tags=class]
+include::ScalarValueTypePage.java[tags=class]
 ----
-
-* the mixin action to add a value is:
-+
-[source,java]
-.CompositeValueTypePage_addComplexNumber.java
-----
-include::CompositeValueTypePage_addComplexNumber.java[tags=class]
-----
-<.> presents two parameters; the first is a read-only copy of the value held by the page object
-<.> delegates to the `add` operation on the `ComplexNumber` value type
-<.> defaults the first parameter to that held by the page object
-<.> makes the first parameter disabled; the end-user can only enter a value for the second parameter.
-+
-WARNING: the framework currently has a bug in that it doesn't prevent the end-user from editing the first parameter; being tracked with https://issues.apache.org/jira/browse/CAUSEWAY-3455[CAUSEWAY-3455].
-+
-The action to subtract is similar.
 
 === Value Semantics Provider
 
@@ -66,12 +46,10 @@ This is done by providing an implementation of a link:https://causeway.apache.or
 * the `ValueSemanticsProvider` implementation is:
 +
 [source,java,indent=0]
-.ComplexNumberValueSemantics.java
+.EmailAddressValueSemantics.java
 ----
-include::ComplexNumberValueSemantics.java[tags=class]
+include::EmailAddressValueSemantics.java[tags=class]
 ----
-<.> declares a "default" mixin that the framework uses to present an action prompt to set the parts of the value type.
-This is discussed in more detail below.
 <.> inherits from link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/value/semantics/ValueSemanticsAbstract.html[ValueSemanticsAbstract], a convenience adapter.
 
 * the `compose()` and `decompose()` methods are used to serialize the object using the structures defined by the link:https://causeway.apache.org/refguide/2.0.0-RC1/schema/about.html[XSD schemas].
@@ -80,7 +58,7 @@ Using this, the framework can render the composite value as JSON (as used by the
 +
 [source,java,indent=0]
 ----
-include::ComplexNumberValueSemantics.java[tags=compose]
+include::EmailAddressValueSemantics.java[tags=compose]
 ----
 
 * the `getRenderer()` is used to render the value as a string.
@@ -88,30 +66,39 @@ An HTML representation can also be provided, though this type doesn't warrant on
 +
 [source,java,indent=0]
 ----
-include::ComplexNumberValueSemantics.java[tags=getRenderer]
+include::EmailAddressValueSemantics.java[tags=getRenderer]
 ----
 
 * the `getDefaultsProvider()` provides an initial value (eg non-nullable properties):
 +
 [source,java,indent=0]
 ----
-include::ComplexNumberValueSemantics.java[tags=getDefaultsProvider]
+include::EmailAddressValueSemantics.java[tags=getDefaultsProvider]
 ----
 
-* Finally, the "default" mixin (mentioned above) defines an action to set the components of the value type.
-The name "default" in this context is in effect a reserved method name.
+* the `getParser()` is used to convert the string (entered in the UI) into the value type.
+If the value entered is invalid, then an exception can be thrown.
 +
-[source,java]
-.ComplexNumber_default.java
+[source,java,indent=0]
 ----
-include::ComplexNumber_default.java[tags=default-mixin]
+include::EmailAddressValueSemantics.java[tags=getParser]
 ----
-<.> should always specify the `INLINE_AS_IF_EDIT` prompt style, because the prompt may be "nested" within an outer action prompt (e.g. the `addComplexNumber` action of the page object iself)
 
-Comparing composite value types to scalar value types, you'll notice that a composite type doesn't need to define a `Parser` implementation; instead the "default" mixin performs an equivalent role.
+* the `getIdStringifier()` allows the value type to be used as (part of) an identifier of the object.
+The string returned must be URL safe.
++
+[source,java,indent=0]
+----
+include::EmailAddressValueSemantics.java[tags=getIdStringifier]
+----
+
+Comparing scalar value types to composite value types, you'll notice that a scalar type doesn't need to define a "default" mixin; instead the `Parser` performs an equivalent role.
+
 
 === Integrating with an ORM
 
 Be aware that if using the value type within an entity, then it will also be necessary to implement additional code to instruct the ORM how to convert the value type into the database.
+The ORMs offer several alternatives, but for example:
 
-The "embedded types" demo page shows how this can be done.
+* if using JPA, then implement `javax.persistence.AttributeConverter`
+* if using JDO, then implement `org.datanucleus.store.types.converters.TypeConverter`
